# openmeteo-cli

./: Cargo.toml  README.md  openmeteo
analysis/: analyze.py  collect.py  collect_history.py  config.py
src/: data.rs  fetch.rs  lib.rs  location.rs  main.rs  openmeteo_fetch.rs  table.rs
