[package]
name = "openmeteo"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
unicode-width = "0.2"
regex = "1.10"
anyhow = "1.0"
itertools = "0.14"
